# secure-fl

./: .coverage  .dockerignore  .gitignore  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  MIGRATION.md  Makefile  PRODUCTION_DEPLOYMENT.md  PUBLISHING.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_implementation.py
.github/workflows/: auto-publish.yml  ci.yml  publish.yml
blockchain/: FLVerifier.sol
docs/: DOCKER.md  TRAINING_EXAMPLES.md  VERSION_SYSTEM.md  ZKP_SETUP.md
docs/concept-note/: main.tex  references.bib
docs/progress_report/: main-succint.tex  main.tex  ref.bib
docs/progress_report/Images/experiments/additional_datasets/cifar10_text_classification_synthetic_large_baseline_non_iid_zkp_medium_rigor_zkp_low_rigor_20251207_103446/: experiment_summary.txt
docs/progress_report/Images/experiments/additional_datasets/cifar10_text_classification_synthetic_large_baseline_non_iid_zkp_medium_rigor_zkp_low_rigor_20251207_103446/raw_data/: benchmark_results.json  cifar10_results.json
docs/progress_report/Images/experiments/benchmark_results/synthetic_mnist_8configs_20251207_095447/: experiment_summary.txt
docs/progress_report/Images/experiments/benchmark_results/synthetic_mnist_8configs_20251207_095447/raw_data/: benchmark_results.json  mnist_results.json  synthetic_results.json
docs/progress_report/Images/experiments/comprehensive_benchmark/5datasets_4configs_20251207_103209/: experiment_summary.txt
docs/progress_report/Images/experiments/comprehensive_benchmark/5datasets_4configs_20251207_103209/raw_data/: benchmark_results.json  fashion_mnist_results.json  financial_results.json  medical_results.json  mnist_results.json  synthetic_results.json
docs/progress_report/Images/experiments/final_test/synthetic_baseline_iid_zkp_medium_rigor_20251207_101213/: experiment_summary.txt
docs/progress_report/Images/experiments/final_test/synthetic_baseline_iid_zkp_medium_rigor_20251207_101213/raw_data/: benchmark_results.json  synthetic_results.json
docs/progress_report/Images/experiments/test_improved/synthetic_baseline_iid_zkp_medium_rigor_20251207_101117/: experiment_summary.txt
docs/progress_report/Images/experiments/test_improved/synthetic_baseline_iid_zkp_medium_rigor_20251207_101117/raw_data/: benchmark_results.json  synthetic_results.json
docs/progress_report/Images/experiments/test_improved2/synthetic_baseline_iid_zkp_medium_rigor_20251207_101136/: experiment_summary.txt
docs/progress_report/Images/experiments/test_improved2/synthetic_baseline_iid_zkp_medium_rigor_20251207_101136/raw_data/: benchmark_results.json  synthetic_results.json
docs/progress_report/chapters/: 01_introduction.tex  02_literature_review.tex  03_methodology.tex  04_system_design.tex  05_experimental_methodology.tex  06_experimental_results.tex  07_progress_report.tex  08_appendix.tex
docs/progress_report/figures/: experimental_framework.mmd  federated_learning_flow.mmd  security_threat_model.mmd  system_architecture.mmd  zkp_verification_process.mmd
docs/progress_report/frontmatter/: abbreviations.tex  acknowledgments.tex
docs/progress_report/images/mermaid/: federated_learning_flow.mmd  system_architecture.mmd
docs/progress_report/preamble/: packages.tex
docs/progress_report/summary/: CURRENT_STATUS.md
docs/project-proposal/: main.tex  ref.bib
docs/proposal-defense/: defense.md
examples/: QUICKSTART.md  README.md  config.yaml  data_loader_demo.py  docker-compose.yml
experiments/: README.md  __init__.py  benchmark.py  config.yaml  demo.py  enhanced_proof_manager.py  generate_figure_6_3.py  generate_performance_report.py  performance_benchmark.py  run_all_benchmarks.py  simple_benchmark.py  test_performance_benchmarks.py  test_setup.py  train_secure_fl.py
experiments/results/: experiment_results.json
fl/: __init__.py  client.py  proof_manager.py  utils.py
proofs/client/: sgd_full_trace.cairo
proofs/client_circuits/: delta_bound.py
proofs/server/: aggregation.circom  fedjscm_aggregation.circom
scripts/: README.md  cleanup_redundancy.py  debug_docker.py  deploy-ghcr.sh  docker.sh  test_connection.py  version.py
scripts/docker/: build.sh  clean.sh  compose.sh  dev.sh  quickstart.sh  test.sh
secure_fl/: .build_number  __init__.py  __main__.py  _version.py  aggregation.py  cli.py  client.py  config.py  monitoring.py  proof_manager.py  quantization.py  server.py  setup.py  stability_monitor.py  utils.py
secure_fl/data/: __init__.py  dataloader.py  utils.py
secure_fl/experiments/: __init__.py  benchmark.py  demo.py  train.py  train_secure_fl.py
secure_fl/models/: __init__.py  cifar10.py  flexible_mlp.py  mnist.py  resnet.py  simple.py
tests/: __init__.py  conftest.py  debug_client_proof.py  debug_client_pysnark.py  pysnark_ek_main  pysnark_eqs  pysnark_eqs_main  pysnark_masterek  pysnark_proof  pysnark_values  pysnark_vk_main  pysnark_wires  smoke_test.py  test_client_pysnark_proof.py  test_client_server_proof.py  test_server_snark_aggregration.py  test_server_verify_client_proof.py  test_snark.py  test_zkp_debug.py
tests/e2e/: test_complete_training.py
tests/integration/: test_fl_workflow.py
tests/unit/: test_aggregation.py  test_quantization.py  test_utils.py
