[project]
name = "secure-fl"
dynamic = ["version"]
description = "Dual-Verifiable Framework for Federated Learning using Zero-Knowledge Proofs"
authors = [
    {name = "Krishant Timilsina", email = "krishtimil@gmail.com"},
    {name = "Bindu Paudel", email = "binduupaudel565@gmail.com"}
]
maintainers = [
    {name = "Krishant Timilsina", email = "krishtimil@gmail.com"},
    {name = "Bindu Paudel", email = "binduupaudel565@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
homepage = "https://github.com/krishantt/secure-fl"
repository = "https://github.com/krishantt/secure-fl"
documentation = "https://github.com/krishantt/secure-fl/blob/main/README.md"
keywords = [
    "federated-learning",
    "zero-knowledge-proofs",
    "blockchain",
    "privacy",
    "machine-learning",
    "zk-starks",
    "zk-snarks",
    "cryptography"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    # Core ML and FL frameworks
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "flwr>=1.5.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",

    # ZKP libraries and cryptography
    "py-ecc>=6.0.0",
    "eth-account>=0.9.0",
    "web3>=6.0.0",

    # Data handling and utilities
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",

    # System utilities
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",

    # Networking and communication
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "websockets>=11.0",

    # Configuration and CLI
    "click>=8.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

# Medical datasets and research tools
medical = [
    "medmnist>=2.2.0",
    "nibabel>=5.1.0",
    "pydicom>=2.4.0",
]

# Jupyter and notebook support
notebook = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "plotly>=5.15.0",
]

# Advanced quantization support
quantization = [
    "brevitas>=0.10.0",
    "pytorch-quantization>=2.1.2",
]

# Blockchain and smart contract tools (optional, requires external setup)
blockchain = [
    "brownie-eth>=1.19.0; platform_system != 'Windows'",
    "solcx>=1.12.0",
]

# All optional dependencies
all = [
    "secure-fl[dev,medical,notebook,quantization,blockchain]",
]

[project.urls]
"Bug Reports" = "https://github.com/krishantt/secure-fl/issues"
"Source" = "https://github.com/krishantt/secure-fl"
"Documentation" = "https://github.com/krishantt/secure-fl/blob/main/README.md"

[project.scripts]
# Main CLI entry points
secure-fl = "secure_fl.cli:main"
secure-fl-server = "secure_fl.cli:server_command"
secure-fl-client = "secure_fl.cli:client_command"
secure-fl-experiment = "secure_fl.cli:experiment_command"
secure-fl-setup = "secure_fl.cli:setup_command"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = {source = "call", getter = "secure_fl._version:get_version"}
author-email = "krishtimil@gmail.com"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
]
lint = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[tool.pdm.scripts]
# Development scripts
test = "pytest tests/ -v --cov=secure_fl --cov-report=html"
lint = "black . && isort . && flake8 ."
type-check = "mypy secure_fl/"
format = "black . && isort ."

# Setup and installation scripts
setup-zkp = "python -m secure_fl.setup zkp"
setup-full = "python -m secure_fl.setup full"
check-system = "python -m secure_fl.setup check"

# Version management scripts
version = "python scripts/version.py show"
version-increment = "python scripts/version.py increment"
version-set = "python scripts/version.py set"
version-publish = "python scripts/version.py publish"
version-build-info = "python scripts/version.py build-info"
build-with-version = "python scripts/version.py build"

# Experiment scripts
demo = "python -m secure_fl.experiments.demo"
benchmark = "python -m secure_fl.experiments.benchmark"
train-synthetic = "python -m secure_fl.experiments.train --dataset synthetic"
train-mnist = "python -m secure_fl.experiments.train --dataset mnist"

# Cleanup
clean = "python -m secure_fl.setup clean"
clean-all = "python -m secure_fl.setup clean --all"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | proofs/compiled
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["secure_fl"]
known_third_party = ["torch", "flwr", "numpy", "pandas", "matplotlib", "seaborn", "tqdm", "web3", "eth_account"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "flwr.*",
    "py_ecc.*",
    "eth_account.*",
    "web3.*",
    "medmnist.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "zkp: marks tests that require ZKP tools (Cairo, Circom)",
    "gpu: marks tests that require GPU",
    "blockchain: marks tests that require blockchain tools",
]

[tool.coverage.run]
source = ["secure_fl"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "*/experiments/*",
    "*/proofs/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# Package data and files to include
[tool.pdm.build]
includes = [
    "secure_fl/",
    "proofs/",
    "blockchain/",
    "experiments/",
    "docs/",
    "k8s/",
    "infra/",
]
excludes = [
    "**/__pycache__/",
    "**/*.pyc",
    "**/*.pyo",
    "**/.pytest_cache/",
    "**/results/temp_*",
    "**/*_compiled.json",
    "**/witness/",
    "**/circuit.wasm",
    "**/circuit_js/",
    "**/.venv/",
    "**/node_modules/",
]
