[project]
name = "secure-fl"
version = "2024.12.20.dev.1"
description = "Dual-Verifiable Framework for Federated Learning using Zero-Knowledge Proofs"
authors = [
    {name = "Krishant Timilsina", email = "krishtimil@gmail.com"},
    {name = "Bindu Paudel", email = "binduupaudel565@gmail.com"}
]
maintainers = [
    {name = "Krishant Timilsina", email = "krishtimil@gmail.com"},
    {name = "Bindu Paudel", email = "binduupaudel565@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
homepage = "https://github.com/krishantt/secure-fl"
repository = "https://github.com/krishantt/secure-fl"
documentation = "https://github.com/krishantt/secure-fl/blob/main/README.md"
keywords = [
    "federated-learning",
    "zero-knowledge-proofs",
    "blockchain",
    "privacy",
    "machine-learning",
    "zk-starks",
    "zk-snarks",
    "cryptography"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    # Core ML and FL frameworks
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "flwr>=1.5.0",
    "scikit-learn>=1.3.0",
    # ZKP libraries and cryptography
    "py-ecc>=6.0.0",
    "eth-account>=0.9.0",
    "web3>=6.0.0",
    # Data handling and utilities
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    # System utilities
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    # Networking and communication
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "websockets>=11.0",
    # Configuration and CLI
    "click>=8.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pysnark",
    "pytest-benchmark>=5.2.3",
    "memory-profiler>=0.61.0",
    "py-spy>=0.4.1",
    "poethepoet>=0.24.0",
    "hatchling>=1.21.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.5.0",
    "ruff>=0.14.7",
]

# Medical datasets and research tools
medical = [
    "medmnist>=2.2.0",
    "nibabel>=5.1.0",
    "pydicom>=2.4.0",
]

# Advanced quantization support
quantization = [
    # "brevitas>=0.10.0",
    # "pytorch-quantization>=2.1.2",
]

# All optional dependencies
all = [
    "secure-fl[dev,medical,quantization]",
]

[project.urls]
"Bug Reports" = "https://github.com/krishantt/secure-fl/issues"
"Source" = "https://github.com/krishantt/secure-fl"
"Documentation" = "https://github.com/krishantt/secure-fl/blob/main/README.md"

[project.scripts]
# Main CLI entry points
secure-fl = "secure_fl.cli:main"
secure-fl-server = "secure_fl.cli:server_command"
secure-fl-client = "secure_fl.cli:client_command"
secure-fl-experiment = "secure_fl.cli:experiment_command"
secure-fl-setup = "secure_fl.cli:setup_command"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Static version for Docker builds - dynamic version handled by _version.py at runtime

[tool.hatch.build.targets.wheel]
packages = ["secure_fl"]

[tool.poe.tasks]
# Development tasks
test = "pytest tests/ -v --cov=secure_fl --cov-report=html"
test-fast = "pytest tests/ -x -v"
test-watch = "pytest-watch tests/"
lint = "ruff check ."
format = "ruff format ."
type-check = "mypy secure_fl/"
lint-fix = "ruff check --fix ."

# Composite tasks
precommit = ["format", "lint-fix", "test-fast"]
ci = ["lint", "type-check", "test"]

# Setup and installation tasks
setup-zkp = "python -m secure_fl.setup zkp"
setup-full = "python -m secure_fl.setup full"
check-system = "python -m secure_fl.setup check"

# Version management tasks
version = "python scripts/version.py show"
version-increment = "python scripts/version.py increment"
version-set = "python scripts/version.py set"
version-publish = "python scripts/version.py publish"
version-build-info = "python scripts/version.py build-info"
build-with-version = "python scripts/version.py build"

# Experiment tasks
demo = "python experiments/demo.py"
benchmark = "python experiments/benchmark.py"
train = "python experiments/train.py"

# Server and client tasks
server = "python -m secure_fl.cli server"
client = "python -m secure_fl.cli client"

# Docker tasks
docker-build = "./scripts/docker.sh build"
docker-demo = "./scripts/docker.sh demo"
docker-dev = "./scripts/docker.sh dev"
docker-up = "./scripts/docker.sh up"
docker-down = "./scripts/docker.sh down"
docker-clean = "./scripts/docker.sh clean"
docker-status = "./scripts/docker.sh status"

# Cleanup tasks
clean = "python -m secure_fl.setup clean"
clean-all = "python -m secure_fl.setup clean --all"
clean-cache = { shell = "find . -type d -name '__pycache__' -exec rm -rf {} + 2>/dev/null || true" }

# Documentation tasks
docs-build = "sphinx-build -b html docs/ docs/_build/html"
docs-serve = { shell = "cd docs/_build/html && python -m http.server 8000" }

[tool.poe.tasks.install-dev]
help = "Install development dependencies"
shell = "uv sync --all-extras --dev"

[tool.poe.tasks.install-prod]
help = "Install production dependencies only"
shell = "uv sync --no-dev"

[tool.poe.tasks.update-deps]
help = "Update all dependencies"
shell = "uv lock --upgrade"

[tool.poe.tasks.publish-build]
help = "Build package for publishing"
shell = "uv build"

[tool.poe.tasks.publish-check]
help = "Check built package"
shell = "uv run twine check dist/*"

[tool.ruff]
line-length = 88
target-version = "py311"

lint.select = [
    "E",  # pyflakes
    "F",  # pycodestyle
    "B",  # bugbear
    "I",  # import sorting
    "UP", # pyupgrade
]

lint.ignore = [
    "E501",  # line length handled by formatter instead
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["secure_fl"]
known-third-party = ["torch", "flwr", "numpy", "pandas", "matplotlib", "seaborn", "tqdm", "web3", "eth_account"]


[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "flwr.*",
    "py_ecc.*",
    "eth_account.*",
    "web3.*",
    "medmnist.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "zkp: marks tests that require ZKP tools (Cairo, Circom)",
    "gpu: marks tests that require GPU",
    "blockchain: marks tests that require blockchain tools",
]

[tool.coverage.run]
source = ["secure_fl"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "*/experiments/*",
    "*/proofs/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.uv.sources]
pysnark = { git = "https://github.com/meilof/pysnark" }

# Package configuration for hatch
[tool.hatch.build]
include = [
    "secure_fl/",
    "proofs/",
]
exclude = [
    "**/__pycache__/",
    "**/*.pyc",
    "**/*.pyo",
    "**/.pytest_cache/",
    "**/results/temp_*",
    "**/*_compiled.json",
    "**/witness/",
    "**/circuit.wasm",
    "**/circuit_js/",
    "**/.venv/",
    "**/node_modules/",
    "**/experiments/results/",
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
lint = [
    "mypy>=1.5.0",
    "ruff>=0.14.7",
]
